<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_promotion">

    <fragment
        android:id="@+id/navigation_promotion"
        android:name="th.ku.tander.ui.promotion.PromotionFragment"
        android:label="@string/title_promotion"
        tools:layout="@layout/fragment_promotion" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="th.ku.tander.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_nearby"
        android:name="th.ku.tander.ui.nearby.NearbyFragment"
        android:label="@string/title_nearby"
        tools:layout="@layout/fragment_nearby" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="th.ku.tander.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
