<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E6E6"
    tools:context=".ui.search.SearchFilterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/category_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp"
        android:background="@android:color/white"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/popup_category_string"
            android:textSize="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/goto_category_list_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popup_category_hint"
            android:textSize="16dp"
            android:textColor="@android:color/darker_gray"
            android:textAlignment="viewEnd"
            android:textAllCaps="false"
            android:background="@android:color/white"
            android:shadowColor="@android:color/darker_gray"
            style="?attr/borderlessButtonStyle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/next_arrow"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/next_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="6dp"
            android:text=">"
            android:textAlignment="viewEnd"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/filter_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/category_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/start_price_min_price"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="30dp"
                android:padding="10dp"
                android:text="0"
                android:textSize="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <SeekBar
                android:id="@+id/filter_seekbar"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:padding="20dp"
                android:max="1000"
                android:min="0"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/start_price_min_price"
                app:layout_constraintEnd_toStartOf="@+id/start_price_max_price"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:id="@+id/start_price_max_price"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginEnd="30dp"
                android:padding="10dp"
                android:text="1000"
                android:textSize="16dp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/filter_seekbar"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/start_price_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:text="@string/start_price_text"
            android:textColor="@android:color/black"
            android:textSize="16dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_button_bar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/filter_button"
            android:layout_width="90dp"
            android:layout_height="36dp"
            android:layout_margin="20dp"
            android:background="@drawable/button_background"
            android:text="@string/filter_button_text"
            android:textStyle="bold"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>